--- a/_posts/2017-05-10-SOLID原则.md
+++ b/_posts/2017-05-10-SOLID原则.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: SOLID原则
+categories: SOLID原则
+description: 
+keywords: SOLID, 面向对象设计原则
+---
+
 ## SOLID
 
 ​        作为开篇，这篇文章主要来介绍SOLID原则。 SOLID 原则提供了五条指导思想，如果我们遵从它们的话， 将可以显著的提升我们软件可维护性。
