modify markdown format

--- a/_posts/2017-09-04-android自定义仿微信、支付宝 密码输入框.md
+++ b/_posts/2017-09-04-android自定义仿微信、支付宝 密码输入框.md
@@ -5,13 +5,12 @@ categories: 自定义view
 description: 
 keywords: android自定义view, android自定义仿微信支付宝密码输入框
 ---
-
-#####效果图：
+## 效果图：
 
 
 ![截图.png](http://upload-images.jianshu.io/upload_images/2229793-26a657e5418f8766.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-#####直接上代码：
+## 直接上代码：
 
 ```
 /**
