--- a/_posts/2017-11-13-dagger2源码简析.md
+++ b/_posts/2017-11-13-dagger2源码简析.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: dagger2源码简析
+categories: 源码分析
+description: 
+keywords: dagger2 源码分析
+---
+
 # 介绍
 关于dagger [github](https://github.com/google/dagger)上是这样介绍的。
 >A fast dependency injector for Android and Java.
