增加设计模式系列博文

--- a/_posts/2018-1-7-设计模式6大原则.md
+++ b/_posts/2018-1-7-设计模式6大原则.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: 设计模式6大原则
+categories: 设计模式
+description: 设计模式6大原则
+---
+
 #####  一、单一职责原则(Single Responsibility Principle)
 >定义：就一个类而言， 应该仅有一个引起它变化的原因。
 
