--- a/_posts/2018-1-22-换肤功能接入及原理.md
+++ b/_posts/2018-1-22-换肤功能接入及原理.md
@@ -7,7 +7,7 @@ description: 换肤功能接入及原理
 
 >前阵子开源出了自己的[mp3剪切器项目](https://juejin.im/post/5a324f3f5188253da72e7956)，在鸿洋大神公众号的宣传下引来众人关注。本着持续维护的心，计划中项目要实现一个简单的应用内换肤功能。
 
-经过调研发现一款很用心的开源的换肤框架[Android-skin-support](https://github.com/ximsfei/Android-skin-support)。它支持应用内换肤、插件式换肤和自定义加载的方式。在这里只介绍一下应用内换肤方式，希望能够抛砖引玉，详细的介绍可以参考它的[github](https://github.com/ximsfei/Android-skin-support)。先来看看效果Gif图。
+经过调研发现一款很用心的开源的换肤框架Android-skin-support。它支持应用内换肤、插件式换肤和自定义加载的方式。在这里只介绍一下应用内换肤方式，希望能够抛砖引玉，详细的介绍可以参考它的github。先来看看效果Gif图。
 
 ## 效果图
 
@@ -95,7 +95,7 @@ SkinCompatManager.getInstance().loadSkin(
 
 ## 浅析
 1. 定位需要被换肤view的思路 主要通过`LayoutInflaterFactory`获取到当前activity中所有的组件，通过过滤定位到需要换肤的view。可以参考鸿洋的这篇文章 [Android 探究 LayoutInflater setFactory](http://blog.csdn.net/lmj623565791/article/details/51503977)。
-`SkinCompatDelegate`类实现了`LayoutInflaterFactory`接口，并实现了它的`createView()`方法, 这里看`SkinCompatViewInflater类的createView（）`代码如下：
+  `SkinCompatDelegate`类实现了`LayoutInflaterFactory`接口，并实现了它的`createView()`方法, 这里看`SkinCompatViewInflater类的createView（）`代码如下：
 ```
             case "View":
                 view = new SkinCompatView(context, attrs);
